--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "gray-matter": "^4.0.3",
     "lenis": "^1.3.8",
     "motion": "^12.23.12",
     "next": "15.4.5",
